@@ -7,10 +7,15 @@
 
 /**
  * Printer class for creating vCard exports
+ * 
  * @author Markus Krötzsch
  * @author Denny Vrandecic
  * @author Frank Dengler
+ * 
  * @ingroup SemanticResultFormats
+ * 
+ * TODO: fix the insane case
+ * TODO: make SRFvCardAddress constructor sane
  */
 class SRFvCard extends SMWResultPrinter {
 	protected $m_title = '';
@@ -93,86 +98,86 @@ class SRFvCard extends SMWResultPrinter {
 					// mechanism to add non-standard vCard properties as well
 					// (could include funny things like geo, description etc.)
 					$req = $field->getPrintRequest();
-					$reqValue = ( strtolower( $req->getLabel() ) );
-					switch( $reqValue ) {
+					
+					switch( strtolower( $req->getLabel() ) ) {
 						case "name":
-							$value = current( $field->getContent() ); // save only the first
+							$value = efSRFGetNextDV( $field );
 							if ( $value !== false ) {
 								$fullname = $value->getShortWikiText();
 							}
 						break;
 
 						case "prefix":
-							foreach ( $field->getContent() as $value ) {
+							while( $value = efSRFGetNextDV( $field ) ) {
 								$prefix .= ( $prefix ? ',':'' ) . $value->getShortWikiText();
 							}
 						break;
 
 						case "suffix":
-							foreach ( $field->getContent() as $value ) {
+							while( $value = efSRFGetNextDV( $field ) ) {
 								$suffix .= ( $suffix ? ',':'' ) . $value->getShortWikiText();
 							}
 						break;
 
 						case "firstname":
-						$value = current( $field->getContent() ); // save only the first
+							$value = efSRFGetNextDV( $field ); // save only the first
 							if ( $value !== false ) {
 								$firstname = $value->getShortWikiText();
 							}
 						break;
 
 						case "extraname":
-							foreach ( $field->getContent() as $value ) {
+							while( $value = efSRFGetNextDV( $field ) ) {
 								$additionalname .= ( $additionalname ? ',':'' ) . $value->getShortWikiText();
 							}
 						break;
 
 						case "lastname":
-							$value = current( $field->getContent() ); // save only the first
+							$value = efSRFGetNextDV( $field ); // save only the first
 							if ( $value !== false ) {
 								$lastname = $value->getShortWikiText();
 							}
 						break;
 
 						case "note":
-							foreach ( $field->getContent() as $value ) {
+							while( $value = efSRFGetNextDV( $field ) ) {
 								$note .= ( $note ? ', ':'' ) . $value->getShortWikiText();
 							}
 						break;
 
 						case "email":
-							foreach ( $field->getContent() as $entry ) {
-								$emails[] = new SRFvCardEmail( 'internet', $entry->getShortWikiText() );
+							while( $value = efSRFGetNextDV( $field ) ) {
+								$emails[] = new SRFvCardEmail( 'internet', $value->getShortWikiText() );
 							}
 					 	break;
 
 						case "workphone":
-							foreach ( $field->getContent() as $entry ) {
-								$tels[] = new SRFvCardTel( 'WORK', $entry->getShortWikiText() );
+							while( $value = efSRFGetNextDV( $field ) ) {
+								$tels[] = new SRFvCardTel( 'WORK', $value->getShortWikiText() );
 							}
 					 	break;
 
 						case "cellphone":
-							foreach ( $field->getContent() as $entry ) {
-								$tels[] = new SRFvCardTel( 'CELL', $entry->getShortWikiText() );
+							while( $value = efSRFGetNextDV( $field ) ) {
+								$tels[] = new SRFvCardTel( 'CELL', $value->getShortWikiText() );
 							}
 						break;
 
 						case "homephone":
-							foreach ( $field->getContent() as $entry ) {
-								$tels[] = new SRFvCardTel( 'HOME', $entry->getShortWikiText() );
+							while( $value = efSRFGetNextDV( $field ) ) {
+								$tels[] = new SRFvCardTel( 'HOME', $value->getShortWikiText() );
 							}
 						break;
 
 						case "organization":
-							$value = current( $field->getContent() ); // save only the first
+							$value = efSRFGetNextDV( $field );
 							if ( $value !== false ) {
 								$organization = $value->getShortWikiText();
 							}
 						break;
 
 						case "workpostofficebox":
-							$value = current( $field->getContent() ); // save only the first
+							$value = efSRFGetNextDV( $field );
 							if ( $value !== false ) {
 								$workpostofficebox = $value->getShortWikiText();
 								$workaddress = true;
@@ -180,7 +185,7 @@ class SRFvCard extends SMWResultPrinter {
 						break;
 
 						case "workextendedaddress":
-							$value = current( $field->getContent() ); // save only the first
+							$value = efSRFGetNextDV( $field );
 							if ( $value !== false ) {
 								$workextendedaddress = $value->getShortWikiText();
 								$workaddress = true;
@@ -188,7 +193,7 @@ class SRFvCard extends SMWResultPrinter {
 						break;
 
 						case "workstreet":
-							$value = current( $field->getContent() ); // save only the first
+							$value = efSRFGetNextDV( $field );
 							if ( $value !== false ) {
 								$workstreet = $value->getShortWikiText();
 								$workaddress = true;
@@ -196,7 +201,7 @@ class SRFvCard extends SMWResultPrinter {
 						break;
 
 						case "worklocality":
-							$value = current( $field->getContent() ); // save only the first
+							$value = efSRFGetNextDV( $field );
 							if ( $value !== false ) {
 								$worklocality = $value->getShortWikiText();
 								$workaddress = true;
@@ -204,7 +209,7 @@ class SRFvCard extends SMWResultPrinter {
 						break;
 
 						case "workregion":
-							$value = current( $field->getContent() ); // save only the first
+							$value = efSRFGetNextDV( $field );
 							if ( $value !== false ) {
 								$workregion = $value->getShortWikiText();
 								$workaddress = true;
@@ -212,7 +217,7 @@ class SRFvCard extends SMWResultPrinter {
 						break;
 
 						case "workpostalcode":
-							$value = current( $field->getContent() ); // save only the first
+							$value = efSRFGetNextDV( $field );
 							if ( $value !== false ) {
 								$workpostalcode = $value->getShortWikiText();
 								$workaddress = true;
@@ -220,7 +225,7 @@ class SRFvCard extends SMWResultPrinter {
 						break;
 
 						case "workcountry":
-							$value = current( $field->getContent() ); // save only the first
+							$value = efSRFGetNextDV( $field );
 							if ( $value !== false ) {
 								$workcountry = $value->getShortWikiText();
 								$workaddress = true;
@@ -228,7 +233,7 @@ class SRFvCard extends SMWResultPrinter {
 						break;
 
 						case "homepostofficebox":
-							$value = current( $field->getContent() ); // save only the first
+							$value = efSRFGetNextDV( $field );
 							if ( $value !== false ) {
 								$homepostofficebox = $value->getShortWikiText();
 								$homeaddress = true;
@@ -236,7 +241,7 @@ class SRFvCard extends SMWResultPrinter {
 						break;
 
 						case "homeextendedaddress":
-							$value = current( $field->getContent() ); // save only the first
+							$value = efSRFGetNextDV( $field );
 							if ( $value !== false ) {
 								$homeextendedaddress = $value->getShortWikiText();
 								$homeaddress = true;
@@ -244,7 +249,7 @@ class SRFvCard extends SMWResultPrinter {
 						break;
 
 						case "homestreet":
-							$value = current( $field->getContent() ); // save only the first
+							$value = efSRFGetNextDV( $field );
 							if ( $value !== false ) {
 								$homestreet = $value->getShortWikiText();
 								$homeaddress = true;
@@ -252,7 +257,7 @@ class SRFvCard extends SMWResultPrinter {
 						break;
 
 						case "homelocality":
-							$value = current( $field->getContent() ); // save only the first
+							$value = efSRFGetNextDV( $field );
 							if ( $value !== false ) {
 								$homelocality = $value->getShortWikiText();
 								$homeaddress = true;
@@ -260,7 +265,7 @@ class SRFvCard extends SMWResultPrinter {
 						break;
 
 						case "homeregion":
-							$value = current( $field->getContent() ); // save only the first
+							$value = efSRFGetNextDV( $field );
 							if ( $value !== false ) {
 								$homeregion = $value->getShortWikiText();
 								$homeaddress = true;
@@ -268,7 +273,7 @@ class SRFvCard extends SMWResultPrinter {
 						break;
 
 						case "homepostalcode":
-							$value = current( $field->getContent() ); // save only the first
+							$value = efSRFGetNextDV( $field );
 							if ( $value !== false ) {
 								$homepostalcode = $value->getShortWikiText();
 								$homeaddress = true;
@@ -276,7 +281,7 @@ class SRFvCard extends SMWResultPrinter {
 						break;
 
 						case "homecountry":
-							$value = current( $field->getContent() ); // save only the first
+							$value = efSRFGetNextDV( $field );
 							if ( $value !== false ) {
 								$homecountry = $value->getShortWikiText();
 								$homeaddress = true;
@@ -285,7 +290,7 @@ class SRFvCard extends SMWResultPrinter {
 
 						case "birthday":
 							if ( $req->getTypeID() == "_dat" )  {
-								$value = current( $field->getContent() ); // save only the first
+								$value = efSRFGetNextDV( $field );
 								if ( $value !== false ) {
 									$birthday =  $value->getXMLSchemaDate();
 								}
@@ -294,7 +299,7 @@ class SRFvCard extends SMWResultPrinter {
 
 						case "homepage":
 							if ( $req->getTypeID() == "_uri" )  {
-								$value = current( $field->getContent() ); // save only the first
+								$value = efSRFGetNextDV( $field );
 								if ( $value !== false ) {
 									$url =  $value->getWikiValue();
 								}
