@@ -5,6 +5,7 @@ http://semantic-mediawiki.org/wiki/Semantic_Result_Formats
 == SRF 1.6.2 ==
 
 * Fixed error in math printer when there are no numerical results. 
+* Fixed vCard compatibility with SMW 1.6 and later.
 
 == SRF 1.6.1 ==
 
